View Issue Details

IDProjectCategoryView StatusLast Update
0022766Open CASCADEOCCT:Modeling Algorithmspublic2013-12-19 13:55
ReporterpkvAssigned Toifv 
PrioritynormalSeveritymajor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.5.3 
Target Version6.7.0Fixed in Version6.7.0 
Summary0022766: Wrong results done by several algorithms for the case of intersection between a surface of revolution and a plane
DescriptionWrong results done by several algorithms for the case of intersection between a surface of revolution and a plane.
Source shapes are a couple of faces f1, f2.

Case 1.
Pure intersection between underlying surfaces s1, s2 (for f1, f2) does not work. (Exception)
--------------
Case 2.
The intersection between two faces produces 4 curves c_1, c_2, c_3, c_4.
c_1 - seems to be Ok;
c_2 - seems to have wrong derivative on the end with maximal value of the parameter;
c_3 - is BSplineCurve[Degree 1, 2 Poles, 2 Knots]. The two poles are equal 3D-points;
c_4 - the same as c_3;
-------------
Case 3.
 c_1 is the intesection curve between s1, s2;
 The 3D-points Pi [i=1,2...NbP] are taken from c_1 at different values of the parameter.
 The distances between points Pi [i=1,2...NbP] and s2 obtained by projection algorithm are wrong.
Steps To ReproduceUse the following commands to reproduce the problems:
#-------------------
#Case 1
restore f1
restore f2
mksurf s1 f1
mksurf s2 f2
intersect i s1 s2

#-------------------
#Case 2
restore f1
restore f2
bopcurves f1 f2

#-------------------
#Case 3
restore f1
restore f2
bopcurves f1 f2
mksurf s1 f1
mksurf s2 f2
xdistcs c_1 s2 0 1 10

TagsNo tags attached.
Test case numberbugs modalg_5(010) bug22766

Attached Files

  • shapes.zip (975 bytes)

Relationships

parent of 0023948 closedbugmaster Wrong intersection between a surface of revolution and a plane. 

Activities

pkv

2011-10-19 10:24

developer  

shapes.zip (975 bytes)

ifv

2013-04-29 14:35

developer   ~0024296

Branch CR22766 is ready to review.
Note: correction is only to fix exeption (case 1 of bug)

jgv

2013-04-29 16:03

developer   ~0024298

One remark: Precision::IsInfinite(Real) makes Abs(Real) itself, so Abs(argument) is excessive.

ifv

2013-05-08 12:13

developer   ~0024331

The second part of this bug (case 2 and case 3) was moved for new issue: 0023948
so the subject of this issue is only case 1 - exception during intersection.

apn

2013-05-08 12:14

administrator   ~0024332

Last edited: 2013-05-08 12:15

Dear BugMaster,

Branch CR22766 (and products from GIT master) was compiled on Linux and Windows platforms and tested without rebase.
SHA-1: 45ba4de754035c921150ff447b592f481e681fa4

Number of compiler warnings:

occt component :
Linux: 2 (2 on master)
Windows: 11 (11 on master)

products component :
Linux: 0 (0 on master)
Windows: 64 (64 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
bugs modalg_5 bug22766 - OK

Testing on Linux:
Total MEMORY difference: 366362632 / 366085100
Total CPU difference: 44381.630000001416 / 43867.21000000105

Testing on Windows:
Total MEMORY difference: 419858840 / 421218264
Total CPU difference: 29934.21875 / 32204.25

There are not serious differences in images found by testdiff.

ifv

2013-05-08 13:16

developer   ~0024337

Dear bugmaster, please wait to integrate, it is necessary to make minor correction according to jgv remark (see note 24298)

ifv

2013-05-08 14:01

developer   ~0024339

Last edited: 2013-05-08 14:07

Branch CR22766_1 is ready to review
It is correction of CR22766 according to note http://tracker.dev.opencascade.org/view.php?id=22766#c24298

mkv

2013-05-14 15:42

tester   ~0024379

Dear BugMaster,

Branch CR22766_1 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 4b8ea2010e419cc0770b3d2d313bd87020e852b0

Number of compiler warnings:

occt component :
Linux: 2 (2 on master)
Windows: 11 (11 on master)

products component :
Linux: 0 (0 on master)
Windows: 64 (64 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
bugs modalg_5 bug22766 - OK

Testing on Linux:
Total MEMORY difference: 366210440 / 366120428
Total CPU difference: 43483.29000000131 / 43868.170000001046

Testing on Windows:
Total MEMORY difference: 419057772 / 418333420
Total CPU difference: 39730.28125 / 30763.484375

There are not serious differences in images found by testdiff.

Related Changesets

occt: master 12f139fd

2013-05-16 07:38:13

ifv

Details Diff
0022766: Wrong results done by several algorithms for the case of intersection between a surface of revolution and a plane
Add test case for this fix
Affected Issues
0022766
mod - src/math/math_FunctionSetRoot.cxx Diff File
add - tests/bugs/modalg_5/bug22766 Diff File

Issue History

Date Modified Username Field Change
2011-10-19 10:24 pkv New Issue
2011-10-19 10:24 pkv Assigned To => jgv
2011-10-19 10:24 pkv File Added: shapes.zip
2012-03-21 14:17 abv Target Version 6.5.3 => 6.5.4
2012-10-21 11:07 abv Target Version 6.5.4 => 6.6.0
2013-04-15 14:36 abv Assigned To jgv => ifv
2013-04-15 14:36 abv Target Version 6.6.0 => 6.7.0
2013-04-29 14:35 ifv Note Added: 0024296
2013-04-29 14:35 ifv Assigned To ifv => jgv
2013-04-29 14:35 ifv Status new => resolved
2013-04-29 16:03 jgv Note Added: 0024298
2013-04-29 16:03 jgv Status resolved => reviewed
2013-05-08 12:07 ifv Relationship added parent of 0023948
2013-05-08 12:13 ifv Note Added: 0024331
2013-05-08 12:14 apn Note Added: 0024332
2013-05-08 12:15 apn Note Edited: 0024332
2013-05-08 12:15 apn Note Edited: 0024332
2013-05-08 12:16 apn Test case number => bugs modalg_5 bug22766
2013-05-08 12:16 apn Assigned To jgv => bugmaster
2013-05-08 12:16 apn Status reviewed => tested
2013-05-08 13:14 ifv Assigned To bugmaster => ifv
2013-05-08 13:16 ifv Note Added: 0024337
2013-05-08 14:01 ifv Note Added: 0024339
2013-05-08 14:01 ifv Assigned To ifv => jgv
2013-05-08 14:01 ifv Status tested => assigned
2013-05-08 14:07 ifv Note Edited: 0024339
2013-05-08 17:54 ifv Status assigned => resolved
2013-05-13 13:36 jgv Status resolved => reviewed
2013-05-14 15:42 mkv Note Added: 0024379
2013-05-14 15:43 mkv Test case number bugs modalg_5 bug22766 => bugs modalg_5(010) bug22766
2013-05-14 15:43 mkv Assigned To jgv => bugmaster
2013-05-14 15:43 mkv Status reviewed => tested
2013-05-20 10:56 ifv Changeset attached => occt master 12f139fd
2013-05-20 10:56 ifv Assigned To bugmaster => ifv
2013-05-20 10:56 ifv Status tested => verified
2013-05-20 10:56 ifv Resolution open => fixed
2013-12-19 13:53 bugmaster Status verified => closed
2013-12-19 13:55 bugmaster Fixed in Version => 6.7.0