0022766: Wrong results done by several algorithms for the case of intersection between a surface of revolution and a plane Add test case for this fix